action bar and add activity page

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,84 +6,126 @@
     android:layout_height="match_parent"
     android:background="#F1F9FF"
     android:backgroundTint="#F1F9FF"
-    android:padding="30dp"
+    app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"
     tools:context=".AddActivity">
 
-    <Button
-        android:id="@+id/add_button"
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#2699FB"
-        android:text="Adicionar Contacto"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="4dp"
-        android:background="#FFFFFF"
-        android:backgroundTint="#FFFFFF"
-        android:padding="30dp"
+        android:layout_width="339dp"
+        android:layout_height="500dp"
+        android:layout_margin="30dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="42dp"
+        android:background="#F1F9FF"
+        android:backgroundTint="#F1F9FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:context=".AddActivity">
+        app:layout_constraintTop_toBottomOf="@+id/include">
 
-        <EditText
-            android:id="@+id/nome_input"
+        <Button
+            android:id="@+id/add_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
-            android:ems="10"
-            android:hint="Name"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
+            android:backgroundTint="#2699FB"
+            android:text="Adicionar Contacto"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titulo" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-        <EditText
-            android:id="@+id/sobrenome_input"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="sobrenome"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
+            android:layout_height="400dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#FFFFFF"
+            android:padding="30dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nome_input" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".AddActivity">
 
-        <EditText
-            android:id="@+id/contacto_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="contacto"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sobrenome_input" />
+            <EditText
+                android:id="@+id/nome_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
+                android:padding="12dp"
+                android:ems="10"
+                android:textColorHint="#BCE0FD"
+                android:textColor="#2699FB"
+                android:hint="Name"
+                android:background="@drawable/custom_input"
+                android:drawableStart="@drawable/custom_edit_icon"
+                android:drawablePadding="12dp"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titulo"/>
 
-        <TextView
-            android:id="@+id/titulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dados Contacto"
-            android:textColor="#2699FB"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <EditText
+                android:id="@+id/sobrenome_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:padding="12dp"
+                android:ems="10"
+                android:hint="sobrenome"
+                android:textColorHint="#BCE0FD"
+                android:textColor="#2699FB"
+                android:background="@drawable/custom_input"
+                android:drawableStart="@drawable/custom_edit_icon"
+                android:drawablePadding="12dp"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nome_input" />
+
+            <EditText
+                android:id="@+id/contacto_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:padding="12dp"
+                android:ems="10"
+                android:hint="contacto"
+                android:textColorHint="#BCE0FD"
+                android:textColor="#2699FB"
+                android:background="@drawable/custom_input"
+                android:drawableStart="@drawable/custom_phone_icon"
+                android:drawablePadding="12dp"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sobrenome_input" />
+
+            <TextView
+                android:id="@+id/titulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dados Contacto"
+                android:textColor="#2699FB"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
