--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -3,12 +3,14 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
+            <corners android:radius="50dp"/>
             <solid android:color="@color/white"/>
             <stroke android:color="#2699FB" android:width="1dp"/>
         </shape>
     </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
+            <corners android:radius="50dp"/>
             <solid android:color="@color/white"/>
             <stroke android:color="#BCE0FD" android:width="1dp"/>
         </shape>
