--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="339dp"
+        android:layout_width="300dp"
         android:layout_height="500dp"
         android:layout_margin="30dp"
         android:layout_marginStart="36dp"
@@ -35,19 +35,20 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#2699FB"
             android:text="Adicionar Contacto"
+            android:background="@drawable/custom_input"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/caixas_texto" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+            android:id="@+id/caixas_texto"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:background="#FFFFFF"
+            android:layout_height="300dp"
+            android:background="@drawable/custom_input"
             android:backgroundTint="#FFFFFF"
             android:padding="30dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,36 +61,36 @@
                 android:id="@+id/nome_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
-                android:padding="12dp"
-                android:ems="10"
-                android:textColorHint="#BCE0FD"
-                android:textColor="#2699FB"
-                android:hint="Name"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/custom_input"
                 android:drawableStart="@drawable/custom_edit_icon"
                 android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="Name"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:padding="12dp"
+                android:textColor="#2699FB"
+                android:textColorHint="#BCE0FD"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titulo"/>
+                app:layout_constraintTop_toBottomOf="@+id/titulo" />
 
             <EditText
                 android:id="@+id/sobrenome_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:padding="12dp"
-                android:ems="10"
-                android:hint="sobrenome"
-                android:textColorHint="#BCE0FD"
-                android:textColor="#2699FB"
                 android:background="@drawable/custom_input"
                 android:drawableStart="@drawable/custom_edit_icon"
                 android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="sobrenome"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:padding="12dp"
+                android:textColor="#2699FB"
+                android:textColorHint="#BCE0FD"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nome_input" />
@@ -99,16 +100,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:padding="12dp"
-                android:ems="10"
-                android:hint="contacto"
-                android:textColorHint="#BCE0FD"
-                android:textColor="#2699FB"
                 android:background="@drawable/custom_input"
                 android:drawableStart="@drawable/custom_phone_icon"
                 android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="contacto"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:padding="12dp"
+                android:textColor="#2699FB"
+                android:textColorHint="#BCE0FD"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sobrenome_input" />
