--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -19,7 +19,7 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/caixas_texto" />
 
     <Button
         android:id="@+id/delete_button"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/update_button" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/caixas_texto"
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_marginTop="4dp"
