--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,31 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/mainLayout">
+    android:layout_height="80dp"
+    android:id="@+id/mainLayout"
+    android:background="@drawable/custom_input"
+    android:layout_marginTop="10dp"
+    android:layout_marginHorizontal="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp">
+        android:background="@drawable/custom_input">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F1F9FF"
-            android:padding="12dp"
-            >
+            android:background="@drawable/custom_input"
+            android:backgroundTint="#F1F9FF"
+            android:padding="12dp">
 
             <TextView
                 android:id="@+id/id_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
-                android:visibility="invisible"
                 android:textColor="@color/black"
                 android:textSize="40sp"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -39,9 +41,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:text="Luis"
+                android:textColor="#2699FB"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:textColor="#2699FB"
                 app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
                 app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
                 app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />
@@ -52,9 +54,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="Caio"
+                android:textColor="#2699FB"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:textColor="#2699FB"
                 app:layout_constraintStart_toEndOf="@+id/nome_txt"
                 app:layout_constraintTop_toTopOf="@+id/nome_txt" />
 
@@ -64,8 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="965874123"
-                android:visibility="invisible"
                 android:textColor="#2699FB"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="@+id/nome_txt"
                 app:layout_constraintTop_toBottomOf="@+id/nome_txt" />
 
