--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <include layout="@layout/mainactionbar"/>
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/mainactionbar" />
+
+    <EditText
+        android:id="@+id/searchbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/searchbar"
+        android:ems="10"
+        android:hint="Pesquisar"
+        app:counterEnabled="true"
+        app:counterMaxLength="50"
+        app:helperText="required"
+        android:cursorVisible="false"
+        android:drawableEnd="@drawable/ic_baseline_search_24"
+        android:paddingRight="12dp"
+        android:paddingLeft="12dp"
+        android:inputType="textPersonName"
+        android:textColor="#2699FB"
+        android:textColorHint="#BCE0FD"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="95dp"
+        android:layout_marginEnd="16dp"
         android:paddingTop="15dp"
-        android:layout_marginEnd="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/searchbar"
+        app:layout_constraintVertical_bias="0.428" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_button"
@@ -29,11 +59,13 @@
         android:layout_marginBottom="28dp"
         android:clickable="true"
         android:focusable="true"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:outlineProvider="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add"
-        app:backgroundTint="@color/white"
-        app:tint="#2699FB"/>
+        app:tint="#2699FB"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/sem_resultado_texto"
