--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -7,8 +7,7 @@
     android:layout_height="80dp"
     android:id="@+id/mainLayout"
     android:background="@drawable/custom_input"
-    android:layout_marginTop="10dp"
-    android:layout_marginHorizontal="10dp">
+    android:layout_marginTop="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -18,7 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_input"
+            android:background="@drawable/searchbar"
             android:backgroundTint="#F1F9FF"
             android:padding="12dp">
 
@@ -81,7 +80,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_person"
-                app:tint="@color/white" />
+                android:outlineProvider="none"
+                app:tint="@color/white"
+                tools:ignore="SpeakableTextPresentCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
