--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -33,26 +33,29 @@
             android:id="@+id/add_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_input"
             android:backgroundTint="#2699FB"
             android:text="Adicionar Contacto"
-            android:background="@drawable/custom_input"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/caixas_texto" />
+            app:layout_constraintTop_toBottomOf="@+id/caixas_texto"
+            app:layout_constraintVertical_bias="0.504" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/caixas_texto"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/custom_input"
             android:backgroundTint="#FFFFFF"
             android:padding="30dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:context=".AddActivity">
