--- a/app/src/main/res/layout/addunsucessfully.xml
+++ b/app/src/main/res/layout/addunsucessfully.xml
@@ -88,8 +88,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.219">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintVertical_bias="0.219"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
