--- a/app/src/main/res/layout/editadocomsucesso.xml
+++ b/app/src/main/res/layout/editadocomsucesso.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="92dp"
-            app:tint="#E9252C"
+            app:tint="#25E966"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
