--- a/app/src/main/res/layout/addsucessfully.xml
+++ b/app/src/main/res/layout/addsucessfully.xml
@@ -29,9 +29,9 @@
             app:srcCompat="@drawable/ic_person" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/nomeContacto"
             android:layout_width="104dp"
-            android:layout_height="22dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="Contacto 5"
             android:textAlignment="center"
@@ -53,10 +53,10 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/nomeContacto" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/homeButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="50dp"
