--- a/app/src/main/res/layout/perguntarremover.xml
+++ b/app/src/main/res/layout/perguntarremover.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/ic_person" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/nomeContacto"
             android:layout_width="104dp"
             android:layout_height="22dp"
             android:layout_marginTop="32dp"
@@ -54,7 +54,7 @@
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/nomeContacto" />
 
         <ImageView
             android:id="@+id/imageView5"
