--- a/app/src/main/res/layout/addsucessfully.xml
+++ b/app/src/main/res/layout/addsucessfully.xml
@@ -44,8 +44,8 @@
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="164dp"
-            android:layout_height="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="Adicionado com sucesso"
             android:textColor="#2699FB"
