--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -14,66 +14,86 @@
         android:id="@+id/include"
         layout="@layout/actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
-        android:layout_height="500dp"
+        android:layout_width="400dp"
+        android:layout_height="600dp"
         android:layout_margin="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="36dp"
         android:background="#F1F9FF"
         android:backgroundTint="#F1F9FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include">
 
-        .<Button
+        .
+
+        <Button
             android:id="@+id/update_button"
-            android:layout_width="match_parent"
+            android:layout_width="327dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_input"
             android:backgroundTint="#2699FB"
             android:text="Actualizar Contacto"
-            android:background="@drawable/custom_input"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="10sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/caixas_texto" />
+            app:layout_constraintTop_toBottomOf="@+id/caixas_texto"
+            app:layout_constraintVertical_bias="0.802" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/caixas_texto"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_width="327dp"
+            android:layout_height="439dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/custom_input"
             android:backgroundTint="#FFFFFF"
             android:padding="30dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:context=".AddActivity">
+
+            <TextView
+                android:id="@+id/titulo_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dados Contacto"
+                android:textColor="#2699FB"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/nome_input2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="36dp"
                 android:background="@drawable/custom_input"
+                android:cursorVisible="false"
                 android:drawableStart="@drawable/custom_edit_icon"
                 android:drawablePadding="12dp"
                 android:ems="10"
-                android:hint="Nome completo"
-                android:cursorVisible="false"
-                android:textSize="14sp"
+                android:hint="Nome"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:padding="12dp"
                 android:textColor="#2699FB"
                 android:textColorHint="#BCE0FD"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/titulo_user" />
@@ -84,20 +104,41 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/custom_input"
+                android:cursorVisible="false"
                 android:drawableStart="@drawable/custom_edit_icon"
                 android:drawablePadding="12dp"
                 android:ems="10"
-                android:hint="Email"
-                android:cursorVisible="false"
-                android:textSize="14sp"
+                android:hint="Sobrenome"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:padding="12dp"
                 android:textColor="#2699FB"
                 android:textColorHint="#BCE0FD"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nome_input2" />
+
+            <EditText
+                android:id="@+id/email_input2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_input"
+                android:cursorVisible="false"
+                android:drawableStart="@drawable/custom_mail_icon"
+                android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="Email"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:padding="12dp"
+                android:textColor="#2699FB"
+                android:textColorHint="#BCE0FD"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sobrenome_input2" />
 
             <EditText
                 android:id="@+id/contacto_input2"
@@ -105,31 +146,42 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/custom_input"
+                android:cursorVisible="false"
                 android:drawableStart="@drawable/custom_phone_icon"
                 android:drawablePadding="12dp"
                 android:ems="10"
                 android:hint="contacto"
-                android:cursorVisible="false"
-                android:textSize="14sp"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:padding="12dp"
                 android:textColor="#2699FB"
                 android:textColorHint="#BCE0FD"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sobrenome_input2" />
+                app:layout_constraintTop_toBottomOf="@+id/morada_input2" />
 
-            <TextView
-                android:id="@+id/titulo_user"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
+            <EditText
+                android:id="@+id/morada_input2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_input"
+                android:cursorVisible="false"
+                android:drawableStart="@drawable/custom_home_icon"
+                android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="Morada"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:padding="12dp"
                 android:textColor="#2699FB"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textColorHint="#BCE0FD"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.733"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/email_input2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
